--- a/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
+++ b/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
@@ -26,10 +26,18 @@
         </div>
     </div>
     <div class="row">
-        <mat-form-field>
-            <mat-label>Quantity</mat-label>
-            <input matInput name="quantity" [(ngModel)]="stockItem.quantity" />
-        </mat-form-field>
+        <div class="col-sm-6">
+            <mat-form-field class="w-100">
+                <mat-label>Quantity</mat-label>
+                <input matInput name="quantity" [(ngModel)]="stockItem.quantity" />
+            </mat-form-field>
+        </div>
+        <div class="col-sm-6">
+            <mat-form-field class="w-100">
+                <mat-label>Unit</mat-label>
+                <input matInput name="unit" [(ngModel)]="stockItem.unit" />
+            </mat-form-field>
+        </div>
     </div>
     <div class="row">
         <mat-form-field>
