--- a/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
+++ b/ui/pantry-ui/src/app/recipe-view/recipe-view.component.html
@@ -24,6 +24,9 @@
                 <button mat-menu-item (click)="printRecipe()">
                     <mat-icon>print</mat-icon> Print Page
                 </button>
+                <button mat-menu-item (click)="downloadPdf()">
+                    <mat-icon>picture_as_pdf</mat-icon> Download PDF
+                </button>
                 <mat-divider></mat-divider>
                 <!-- Automatic / Detected -->
                 <button mat-menu-item (click)="printRecipeLabel()">
