--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -17,5 +17,6 @@
 
     <a mat-list-item [routerLink]="['/settings/family']" (click)="onLinkClick()">Family Preferences</a>
     <a mat-list-item [routerLink]="['/settings/tags']" (click)="onLinkClick()">Tag Editor</a>
+    <a mat-list-item [routerLink]="['/settings/locations']" (click)="onLinkClick()">Locations</a>
     <a mat-list-item [routerLink]="['/settings']" (click)="onLinkClick()">Settings</a>
 </mat-nav-list>
