--- a/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
+++ b/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
@@ -43,9 +43,18 @@
                     <input matInput name="quantity" type="number" [(ngModel)]="stockItem.quantity" />
                 </mat-form-field>
 
+                <mat-label>Unit</mat-label>
+                <input matInput name="unit" [(ngModel)]="stockItem.unit" placeholder="e.g., pcs, kg, oz" />
+                </mat-form-field>
+
                 <mat-form-field appearance="outline">
-                    <mat-label>Unit</mat-label>
-                    <input matInput name="unit" [(ngModel)]="stockItem.unit" placeholder="e.g., pcs, kg, oz" />
+                    <mat-label>Location</mat-label>
+                    <mat-select [(ngModel)]="stockItem.locationId" name="location">
+                        <mat-option [value]="null">None</mat-option>
+                        <mat-option *ngFor="let loc of locations" [value]="loc.id">
+                            {{loc.name}}
+                        </mat-option>
+                    </mat-select>
                 </mat-form-field>
             </div>
 
