--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -9,6 +9,7 @@
     <mat-divider></mat-divider>
 
     <a mat-list-item [routerLink]="['/barcode/scanner']" (click)="onLinkClick()">Barcode Scanner</a>
+    <a mat-list-item [routerLink]="['/kiosk-mode']" (click)="onLinkClick()">Kiosk Mode</a>
     <a mat-list-item [routerLink]="['/gemini-chat']" (click)="onLinkClick()">Gemini Chat</a>
     <a mat-list-item [routerLink]="['/search']" (click)="onLinkClick()">Search</a>
     <a mat-list-item [routerLink]="['/quick-label']" (click)="onLinkClick()">Quick Label</a>
